Cleanup (#778)
* refactor: replace field injection with constructor injection in test classes

* refactor: update generics in WebSecurityConfig and JwtAuthenticationProvider for improved clarity

* refactor: replace Logger with Lombok's Slf4j in multiple classes for improved logging consistency

* refactor: update generics and enhance null safety in various classes

* refactor: remove clone method from AbstractBaseModel

* refactor: simplify method signatures

* refactor: remove boxing

* refactor: restore clone method in AbstractBaseModel

* refactor: support inline mocking (https://javadoc.io/doc/org.mockito/mockito-core/latest/org.mockito/org/mockito/Mockito.html#0.3)

* refactor: add som missing tests

* refactor: add license headers